sample/03/dnsweb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: dnsweb
  name: dnsweb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dnsweb
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: dnsweb
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
        resources: {}
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: dnsweb
  name: dnsweb
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: dnsweb
  type: NodePort
status:
  loadBalancer: {}
