sample/03/ingress.response.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: externaldomain
spec: {}
status: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: web1
  name: web1
  namespace: externaldomain
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web1
  strategy: {}
  template:
    metadata:
      labels:
        app: web1
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
        resources: {}
        volumeMounts:
        - mountPath: /usr/share/nginx/html/ing
          name: echome
      volumes:
      - name: echome
        emptyDir: {}
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web1
  name: web1
  namespace: externaldomain
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: web1
  type: ClusterIP
status:
  loadBalancer: {}
