sample/03/production.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: production
  labels:
    conn: ok
spec: {}
status: {}
---
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: productionweb
  name: productionweb
  namespace: production
spec:
  containers:
  - image: nginx
    name: productionweb
    ports:
    - containerPort: 80
    volumeMounts:
    - mountPath: /usr/share/nginx/html
      name: web
    resources: {}
  volumes:
  - name: web
    emptyDir: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: productionweb
  name: productionweb
  namespace: production
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: productionweb
  type: NodePort
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: networkpod
  name: networkpod
  namespace: production
spec:
  containers:
  - args:
    - /bin/sleep
    - "3600"
    image: busybox
    name: networkpod
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
