sample/03/ingress.rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-lab
  annotations:
    kubernetes.io/ingress.class: traefik
  namespace: externaldomain
spec:
  rules:
  - host: "training.lab"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: web1
            port:
              number: 80
